--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,4 @@ django-markdown
 futures # python 3.0 backwards compatibility tools
 bunch # alternate-syntax for dicts: dict.key = value
 ordereddict # python 3.0 ordered dict implementation
-requests # full featured http requests
+requests # HTTP for Humans
