--- a/app.json
+++ b/app.json
@@ -3,8 +3,8 @@
     "description": "A simple and mostly useless shared to do app system",
     "repository": "https://github.com/nrabe/todoapp",
     "app:name": "dev-todoapp1",
-    "addons": ["heroku-postgresql:hobby-dev", "papertrail"],
+    "addons": ["heroku-postgresql:hobby-dev", "papertrail"]
     "env": {
-        "ENVIRONMENT": "heroku_production",
-  },
+        "ENVIRONMENT": "heroku_production"
+  }
 }
