preparing to test app.json heroku manifest

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "TO-DO App (demo)",
     "description": "A simple and mostly useless shared to do app system",
     "repository": "https://github.com/nrabe/todoapp",
-    "app:name": "dev-todoapp1",
+    "app": {"name": "dev-todoapp1"},
     "addons": ["heroku-postgresql:hobby-dev", "papertrail"],
     "env": {
         "ENVIRONMENT": "heroku_production"
