--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,4 @@ ordereddict # python 3.0 ordered dict implementation
 requests # HTTP for Humans
 pytz # timezone support for python/django
 whitenoise
+raven>3
